--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -39,6 +39,11 @@ dependencies:
 dev_dependencies:
   flutter_test:
     sdk: flutter
+  args: '^2.4.2'
+  yaml: '^3.1.2'
+  json2yaml: '^3.0.1'
+  yaml_writer: '^1.0.3'
+  http: '1.1.0'
 
   # The "flutter_lints" package below contains a set of recommended lints to
   # encourage good coding practices. The lint set provided by the package is
