--- a/codemagic.yaml
+++ b/codemagic.yaml
@@ -145,7 +145,7 @@ workflows:
   irecharge_mobile_prod_workflow:
     name: Irecharge Global PROD Workflow
     max_build_duration: 30
-    integrations:
+#    integrations:
 #      <<: *ios_integrations
     environment:
       ios_signing:
