--- a/codemagic.yaml
+++ b/codemagic.yaml
@@ -35,9 +35,9 @@ definitions:
 
   #==============================Flutter/Module Specific Configurations===============================
   - &initialize_environment
-    name: Initialize Environment
     script: |
-      flutter clean; flutter pub get; export FLUTTER_BUILD_DIR=build 
+      git clone git@github.com:infostrategytech/mobile-gitops.git
+      flutter clean; flutter pub get; dart run build_runner build --delete-conflicting-outputs; export FLUTTER_BUILD_DIR=build  
 
   #****************************** END Flutter/Module Specific Configurations *************************
 
