--- a/codemagic.yaml
+++ b/codemagic.yaml
@@ -35,6 +35,7 @@ definitions:
 
   #==============================Flutter/Module Specific Configurations===============================
   - &initialize_environment
+    name: Initialize Environment
     script: |
       git clone git@github.com:infostrategytech/mobile-gitops.git
       flutter clean; flutter pub get; dart run build_runner build --delete-conflicting-outputs; export FLUTTER_BUILD_DIR=build  
