--- a/codemagic.yaml
+++ b/codemagic.yaml
@@ -37,7 +37,7 @@ definitions:
   - &initialize_environment
     name: Initialize Environment
     script: |
-      git clone git@github.com:infostrategytech/mobile-gitops.git
+      git clone https://github.com/infostrategytech/mobile-gitops.git
       flutter clean; flutter pub get; dart run build_runner build --delete-conflicting-outputs; export FLUTTER_BUILD_DIR=build  
 
   #****************************** END Flutter/Module Specific Configurations *************************
@@ -108,13 +108,6 @@ workflows:
       <<: *flutter_version_config
       <<: *ios_environment_config
     scripts:
-      - name: Setup SSH for GitHub
-        script: |
-          echo "$SSH_PRIVATE_KEY" > /tmp/id_rsa
-          chmod 600 /tmp/id_rsa
-          eval "$(ssh-agent -s)"
-          ssh-add /tmp/id_rsa
-          ssh-keyscan github.com >> ~/.ssh/known_hosts
       - *initialize_environment
       - dart run mobile-gitops/scripts/deployment.dart build \
         --env=dev --build-type=composite -i $DEV_APP_ID --locale=Accelerate --gitops-ref=$GITOPS_REF
@@ -135,8 +128,6 @@ workflows:
 #      ios_signing:
 #        distribution_type: app_store
 #        bundle_identifier: com.flutterci.flutter_ci_test.staging
-      vars:
-        SSH_PRIVATE_KEY: $SSH_PRIVATE_KEY
       android_signing:
         - android_keystore_reference
       groups:
@@ -145,13 +136,6 @@ workflows:
       <<: *flutter_version_config
       <<: *ios_environment_config
     scripts:
-      - name: Setup SSH for GitHub
-        script: |
-          echo "$SSH_PRIVATE_KEY" > /tmp/id_rsa
-          chmod 600 /tmp/id_rsa
-          eval "$(ssh-agent -s)"
-          ssh-add /tmp/id_rsa
-          ssh-keyscan github.com >> ~/.ssh/known_hosts
       - *initialize_environment
       - dart run mobile-gitops/scripts/deployment.dart build --env=staging --build-type=composite -i 6670788935 --locale=Accelerate --gitops-ref=$GITOPS_REF
     <<: *android_artifacts_config
@@ -172,8 +156,6 @@ workflows:
 #      ios_signing:
 #        distribution_type: app_store
 #        bundle_identifier: com.flutterci.flutter_ci_test
-      vars:
-        SSH_PRIVATE_KEY: $SSH_PRIVATE_KEY
       android_signing:
         - android_keystore_reference_2
       groups:
@@ -182,13 +164,6 @@ workflows:
       <<: *flutter_version_config
       <<: *ios_environment_config
     scripts:
-      - name: Setup SSH for GitHub
-        script: |
-          echo "$SSH_PRIVATE_KEY" > /tmp/id_rsa
-          chmod 600 /tmp/id_rsa
-          eval "$(ssh-agent -s)"
-          ssh-add /tmp/id_rsa
-          ssh-keyscan github.com >> ~/.ssh/known_hosts
       - *initialize_environment
       - dart run mobile-gitops/scripts/deployment.dart build --env=prod --build-type=composite -i $PROD_APP_ID --gitops-ref=$GITOPS_REF
     <<: *android_artifacts_config
