--- a/codemagic.yaml
+++ b/codemagic.yaml
@@ -37,7 +37,7 @@ definitions:
   - &initialize_environment
     name: Initialize Environment
     script: |
-      git clone https://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@github.com/infostrategytech/mobile-gitops.git
+      git clone git@github.com:infostrategytech/mobile-gitops.git
       flutter clean; flutter pub get; dart run build_runner build --delete-conflicting-outputs; export FLUTTER_BUILD_DIR=build  
 
   #****************************** END Flutter/Module Specific Configurations *************************
