--- a/codemagic.yaml
+++ b/codemagic.yaml
@@ -113,7 +113,7 @@ workflows:
     scripts:
       - *initialize_environment
       - dart run tools/deployment.dart build \
-        --env=dev --build-type=composite -i $DEV_APP_ID --locale=Accelerate --gitops-ref=$GITOPS_REF
+        --env=dev --build-type=composite -i $DEV_APP_ID --locale=accelerate --gitops-ref=$GITOPS_REF
     <<: *android_artifacts_config
     publishing:
       email:
@@ -140,7 +140,7 @@ workflows:
       <<: *ios_environment_config
     scripts:
       - *initialize_environment
-      - dart run tools/deployment.dart build --env=staging --build-type=composite -i 6670788935 --locale=Accelerate --gitops-ref=$GITOPS_REF
+      - dart run tools/deployment.dart build --env=staging --build-type=composite -i 6670788935 --locale=accelerate --gitops-ref=$GITOPS_REF
     <<: *android_artifacts_config
     publishing:
       email:
